# LPNU

EPIC2/: algotester_lab_1_task_Oleksii_Malanii.cpp  practice_work_self_algotester_tasks_Oleksii_Malanii.cpp
EPIC2/Algotester_Lab_1_Task_1/: ALGO_LAB1_T1.cpp  CMakeLists.txt
EPIC2/Algotester_Lab_2_Task_1/: ALGO_LAB2_T1.cpp
EPIC2/VNS_Lab_1_Task_1_2/: double1.cpp
EPIC3/: CMakeLists.txt  bobbbbb.cpp  practice_work_self_algotester_Oleksii_Malanii.cpp  vns_lab_2_task_Oleksii_Malanii.cpp  vns_lab_3_task_Oleksii_Malanii.cpp  vns_lab_7_task_Oleksii_Malanii.cpp
EPIC4/: algotester_lab_2_task_3_Oleksii_Malanii.cpp  algotester_lab_3_task_2_Oleksii_Malanii.cpp  practice_work_self_algotester_tasks_Oleksii_Malanii.cpp  practice_work_team_tasks_Oleksii_Malanii.cpp  vns_lab_4_task_5_Oleksii_Malanii.cpp  vns_lab_5_task_5_Oleksii_Malanii.cpp
EPIC5/: F1.txt  F2.txt  algotester_lab_4_variant_3_Oleksii_Malanii.cpp  algotester_lab_6_task_3_Oleksii_Malanii.cpp
EPIC7/: vns_practice_work_1_task_Oleksii_Malanii.cpp  vns_practice_work_2_task_Oleksii_Malanii.cpp
epic 2/: 1v1.cpp
