cmake_minimum_required(VERSION 3.26)
project(EPIC3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(EPIC3
        vns_lab_2_task_Oleksii_Malanii.cpp
        practice_work_self_algotester_Oleksii_Malanii.cpp
        practice_work_team_tasks_Oleksii_Malanii.cpp
        vns_lab_7_task_Oleksii_Malanii.cpp
        vns_lab_3_task_Oleksii_Malanii.cpp
)
